--- a/Tema 9/Boletín2_Aplicaciones_Graficas/Properties/Resources.resx
+++ b/Tema 9/Boletín2_Aplicaciones_Graficas/Properties/Resources.resx
@@ -118,34 +118,67 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="tigre" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tigre.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="dado numero 3" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dado numero 3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="dado numero 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dado numero 2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="tiburon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\tiburon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Jirafa" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Jirafa.JPG;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dado numero 1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dado numero 1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cremas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cremas.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="solo leveling" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\solo leveling.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="cafe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\cafe.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pastas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pastas.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="dado numero 4" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dado numero 4.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dado numero 6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dado numero 6.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="empanada" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\empanada.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="pescados" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\pescados.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="carnes" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\carnes.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tarta de chocolate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tarta de chocolate.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="coca cola" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\coca cola.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tiburon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tiburon.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="agua" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\agua.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="dado numero 5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dado numero 5.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dado numero 6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dado numero 6.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="solo leveling" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\solo leveling.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dado numero 1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dado numero 1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dado numero 2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dado numero 2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ensaladas" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ensaladas.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dado numero 3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dado numero 3.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="tigre" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tigre.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="vino" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\vino.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
